--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "antd": "^4.23.6",
     "firebase": "^9.12.1",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.4",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webrtc": "^106.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
