--- a/app.json
+++ b/app.json
@@ -1,16 +1,17 @@
 {
   "expo": {
-    "name": "whatsapp",
-    "slug": "whatsapp",
+    "name": "reactProject",
+    "slug": "reactProject",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/SplashScreen.png",
-      "resizeMode": "cover",
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    
     "updates": {
       "fallbackToCacheTimeout": 0
     },
