--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "whatsapp",
+  "name": "reactproject",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/stack": "^6.3.10",
-    "@reduxjs/toolkit": "^1.9.1",
-    "expo": "~47.0.9",
-    "expo-image-picker": "^14.0.2",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "firebase": "^9.15.0",
-    "react": "18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-uuid": "^2.0.1",
-    "react-navigation-header-buttons": "^10.0.0",
-    "react-redux": "^8.0.5",
-    "validate.js": "^0.13.1"
+    "@ant-design/icons": "^4.7.0",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "firebase": "^9.6.11",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
