--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "@react-navigation/stack": "^6.2.2",
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
-    "expo": "~45.0.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
+    "expo": "^47.0.0",
+    "expo-image-picker": "~14.0.2",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
